// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="App"
  id="top"
>
  <div
    className="Search"
  >
    <div
      className="SourceSelect"
    >
      <label
        className="SourceSelectRadio active"
        onMouseDown={[Function]}
      >
        <input
          checked={true}
          onChange={[Function]}
          type="radio"
          value="HN"
        />
        <i
          className="fa fa-hacker-news"
        />
      </label>
      <label
        className="SourceSelectRadio"
        onMouseDown={[Function]}
      >
        <input
          checked={false}
          onChange={[Function]}
          type="radio"
          value="Reddit"
        />
        <i
          className="fa fa-reddit-alien"
        />
      </label>
    </div>
    <form
      className="SearchInput"
    >
      <input
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="react"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    className="ResultTable"
  >
    <div
      className="Table"
    >
      <div
        className="TableHeaderRow"
      >
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "44%",
            }
          }
        >
          Title
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "20%",
            }
          }
        >
          Date
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "12%",
            }
          }
        >
          Comments
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "12%",
            }
          }
        >
          Points
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc active"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "12%",
            }
          }
        >
          <i
            className="fa fa-trash"
          />
        </button>
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableRow"
      >
        <i
          className="fa fa-2x fa-circle-o-notch fa-spin"
        />
      </div>
      <div
        className="TableHeaderRow"
      >
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "44%",
            }
          }
        >
          Title
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "20%",
            }
          }
        >
          Date
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "12%",
            }
          }
        >
          Comments
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="DataHeader Button inline"
          onClick={[Function]}
          style={
            Object {
              "width": "12%",
            }
          }
        >
          Points
          <span
            className="SortArrow"
          >
             
            <i
              className="fa fa-sort-desc active"
            />
            <i
              className="fa fa-sort-asc"
            />
          </span>
        </button>
        <button
          className="Button inline"
          style={
            Object {
              "width": "12%",
            }
          }
        >
          <i
            className="fa fa-trash"
          />
        </button>
      </div>
    </div>
    <div
      className="Footer"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
      <a
        className="backtotop"
        href="#top"
      >
        <button
          className="Button clickable"
        >
          Back to top
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button>
  Button
</button>
`;

exports[`ResultTable has a valid snapshot 1`] = `
<div
  className="ResultTable"
>
  <div
    className="Table"
  >
    <div
      className="TableHeaderRow"
    >
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "44%",
          }
        }
      >
        Title
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "20%",
          }
        }
      >
        Date
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "12%",
          }
        }
      >
        Comments
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "12%",
          }
        }
      >
        Points
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc active"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "12%",
          }
        }
      >
        <i
          className="fa fa-trash"
        />
      </button>
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableRow"
    >
      <i
        className="fa fa-2x fa-circle-o-notch fa-spin"
      />
    </div>
    <div
      className="TableHeaderRow"
    >
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "44%",
          }
        }
      >
        Title
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "20%",
          }
        }
      >
        Date
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "12%",
          }
        }
      >
        Comments
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="DataHeader Button inline"
        onClick={[Function]}
        style={
          Object {
            "width": "12%",
          }
        }
      >
        Points
        <span
          className="SortArrow"
        >
           
          <i
            className="fa fa-sort-desc active"
          />
          <i
            className="fa fa-sort-asc"
          />
        </span>
      </button>
      <button
        className="Button inline"
        style={
          Object {
            "width": "12%",
          }
        }
      >
        <i
          className="fa fa-trash"
        />
      </button>
    </div>
  </div>
  <div
    className="Footer"
  >
    <i
      className="fa fa-2x fa-circle-o-notch fa-spin"
    />
    <a
      className="backtotop"
      href="#top"
    >
      <button
        className="Button clickable"
      >
        Back to top
      </button>
    </a>
  </div>
</div>
`;

exports[`SearchInput has a valid snapshot 1`] = `
<form
  className="SearchInput"
>
  <input
    placeholder="react"
    type="text"
  />
</form>
`;
